--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -5,12 +5,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-top: 5vh;
 }
 
 .App-header {
@@ -24,12 +19,8 @@
   color: white;
 }
 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.App-button {
+  text {
+    text-decoration: none;
   }
 }
