--- a/src/components/app/App.module.scss
+++ b/src/components/app/App.module.scss
@@ -1,14 +1,14 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
+.appLogo {
   height: 40vmin;
   pointer-events: none;
   padding-top: 5vh;
 }
 
-.App-header {
+.appHeader {
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
@@ -19,7 +19,7 @@
   color: white;
 }
 
-.App-button {
+.appButton {
   text {
     text-decoration: none;
   }
